# refactored-octo-waddle

./: .gitmodules  sdkconfig  sdkconfig.old
components/nmea_parser/: CMakeLists.txt
main/: CMakeLists.txt  adxl345.c  adxl345.h  app_pwr_mgmnt.c  app_pwr_mgmnt.h  app_ui.c  app_ui.h  lora_radio.c  lora_radio.h  main.c  sx126x.c  sx126x.h
main/loramac/: lora_radio.h  loramac.c  loramac.h  loramac_crypto.c  loramac_crypto.h  loramac_crypto_nvm.c  loramac_debug.c  loramac_debug.h  loramac_handler.c  loramac_handler.h  loramac_message.h  loramac_parser.c  loramac_parser.h  loramac_protocol.h  loramac_region.c  loramac_region.h  loramac_serializer.c  loramac_serializer.h
